--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Who Else Loves Pizza Making?! #pizza #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -596,7 +596,7 @@
                     <div class="video-info">
                         <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -607,7 +607,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -783,7 +783,7 @@
                     <div class="video-info">
                         <h3>PGO Strategy (Rules & Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1192,7 +1192,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5864,7 +5864,7 @@
                         <div class="video-info">
                             <h3>PGO Strategy (Rules & Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6020,7 +6020,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>Who Else Loves Pizza Making?! #pizza #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
