--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Essence of the Spiritual Path</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: TikTok Couples Cringe</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - He’ll come around eventually @chrismd10 #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1920,7 +1920,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Proven Range & Momentum Entry #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -6275,7 +6275,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Proven Range & Momentum Entry #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Essence of the Spiritual Path</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: TikTok Couples Cringe</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - He’ll come around eventually @chrismd10 #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
