--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>SQX v143: The AI Strategy Builder Is Finally Here 🤖📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>3 long term strategies that work (Backtested with Rules)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>SQX v143: The AI Strategy Builder Is Finally Here 🤖📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5875,7 +5875,7 @@
                         <div class="video-info">
                             <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6506,7 +6506,7 @@
                         <div class="video-info">
                             <h3>3 long term strategies that work (Backtested with Rules)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
